--- a/src/contents/ui/textEditor/baseDoc.html
+++ b/src/contents/ui/textEditor/baseDoc.html
@@ -1,8 +1,8 @@
+</html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="baseDoc" content="1">
 </head>
-<body>
 <body>
 
 </body>
