--- a/src/contents/resources/index.html
+++ b/src/contents/resources/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <meta charset="utf-8">
 <head>
-  <link rel="stylesheet" type="text/css" href="markdown.css">
-  <script src="marked.js"></script>
-  <script src="qwebchannel.js"></script>
+<!--   <link rel="stylesheet" type="text/css" href="markdown.css"> -->
+    <script src="marked.js"></script>
+    <script src="qwebchannel.js"></script>
+    <style></style>
 </head>
 <body>
   <div id="placeholder" ></div>
@@ -37,32 +38,40 @@
       }
   }
 
-  let updateCss = function(css) {
-    const cssVarsHolder = document.querySelector(':root');
+    let updateCssVar = function(css) {
+        const cssVarsHolder = document.querySelector(':root');
 
-    for (const [cssVar, value] of Object.entries(css)) {
-      cssVarsHolder.style.setProperty(cssVar, value);
+        for (const [cssVar, value] of Object.entries(css)) {
+          cssVarsHolder.style.setProperty(cssVar, value);
+        }
     }
-  }
 
-  new QWebChannel(qt.webChannelTransport,
-    function(channel) {
-      let linkToEditor = channel.objects.linkToEditor;
-      linkToEditor.textChanged.connect(updateText);
-      updateText(linkToEditor.text);
-
-      let linkToCss = channel.objects.linkToCss;
-      linkToCss.cssChanged.connect(updateCss);
-
-      let homePathPasser = channel.objects.homePathPasser;
-      homePathPasser.homePathChanged.connect(updateHomePath);
-      updateHomePath(homePathPasser.homePath);
-
-      let notePathPasser = channel.objects.notePathPasser;
-      notePathPasser.notePathChanged.connect(updateNotePath);
-      updateNotePath(notePathPasser.notePath);
+    let updateCssStyle = function(css) {
+        const style =  document.getElementsByTagName("style")[0];
+        style.innerHTML = css
     }
-  );
+
+    new QWebChannel(qt.webChannelTransport,
+        function(channel) {
+            let linkToEditor = channel.objects.linkToEditor;
+            linkToEditor.textChanged.connect(updateText);
+            updateText(linkToEditor.text);
+
+            let linkToCssVar = channel.objects.linkToCssVar;
+            linkToCssVar.cssVarChanged.connect(updateCssVar);
+
+            let linkToCssStyle = channel.objects.linkToCssStyle;
+            linkToCssStyle.cssStyleChanged.connect(updateCssStyle);
+
+            let homePathPasser = channel.objects.homePathPasser;
+            homePathPasser.homePathChanged.connect(updateHomePath);
+            updateHomePath(homePathPasser.homePath);
+
+            let notePathPasser = channel.objects.notePathPasser;
+            notePathPasser.notePathChanged.connect(updateNotePath);
+            updateNotePath(notePathPasser.notePath);
+        }
+    );
   </script>
 </body>
 </html>
