--- a/src/contents/resources/index.html
+++ b/src/contents/resources/index.html
@@ -1,10 +1,40 @@
-<!DOCTYPE html>
-<html lang="">
-    <head>
-        <meta charset="utf-8">
-        <title></title>
-    </head>
-    <body>
-        INSERT HTML HERE
-    </body>
+<!doctype html>
+<html lang="en">
+<meta charset="utf-8">
+<head>
+    <link rel="stylesheet" type="text/css" href="markdown.css">
+    <script src="qwebchannel.js"></script>
+</head>
+<body>
+    <div id="placeholder" ></div>
+    <script>
+
+        const placeholder = document.getElementById('placeholder');
+
+        var mdText;
+        let updateText = function(text) {
+            mdText = text;
+            placeholder.innerHTML = text;
+        }
+
+        let updateCss = function(css) {
+            const cssVarsHolder = document.querySelector(':root');
+
+            for (const [cssVar, value] of Object.entries(css)) {
+                cssVarsHolder.style.setProperty(cssVar, value);
+            }
+        }
+
+        new QWebChannel(qt.webChannelTransport,
+            function(channel) {
+                let linkToEditor = channel.objects.linkToEditor;
+                linkToEditor.textChanged.connect(updateText);
+                updateText(linkToEditor.text);
+
+                let linkToCss = channel.objects.linkToCss;
+                linkToCss.cssChanged.connect(updateCss);
+            }
+        );
+    </script>
+</body>
 </html>
