Enabling build with QT6 KF6

--- a/src/contents/resources/index.html
+++ b/src/contents/resources/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <meta charset="utf-8">
 <head>
-    <script src="marked.js"></script>
-    <script src="qwebchannel.js"></script>
+    <script src="qrc:/marked.js"></script>
+    <script src="qrc:/qwebchannel.js"></script>
     <style></style>
 </head>
 <body>
