Use QmlLinker to change css and content
We keep the 'loadHtml' for the first time but the content/css are
now changed via the QmlLinker.

Using loadHtml for each key stroke was getting overkill/slow with long
text, especially long text with code highlight.

--- a/src/contents/resources/index.html
+++ b/src/contents/resources/index.html
@@ -2,9 +2,38 @@
 <html lang="">
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <script src="qrc:/qwebchannel.js"></script>
     </head>
     <body>
-        INSERT HTML HERE
+        <style id="css"></style>
+
+        <div id="contentElem"></div>
+
+        <script>
+            'use strict';
+
+            const contentElem = document.getElementById('contentElem');
+            const cssElem = document.getElementById('css');
+
+            const updateCss = function(css) {
+                cssElem.innerHTML = css
+            }
+
+            const updateText = function(text) {
+                contentElem.innerHTML = text
+            }
+
+            new QWebChannel(qt.webChannelTransport,
+                function(channel) {
+                    const contentLink = channel.objects.contentLink;
+                    updateText(contentLink.text);
+                    contentLink.textChanged.connect(updateText);
+
+                    const cssLink = channel.objects.cssLink;
+                    updateCss(cssLink.text);
+                    cssLink.textChanged.connect(updateCss);
+                }
+            );
+        </script>
     </body>
 </html>
