--- a/src/contents/resources/index.html
+++ b/src/contents/resources/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="">
+    <!-- SPDX-License-Identifier: BSD-3-Clause -->
+    <!-- SPDX-FileCopyrightText: 2023 Louis Schul <schul9louis@gmail.com> -->
     <head>
         <meta charset="utf-8">
         <script src="qrc:/qwebchannel.js"></script>
